[gd_scene load_steps=4 format=3 uid="uid://og6c2vmfh5t2"]

[ext_resource type="Script" uid="uid://dkuyg7m5sr2no" path="res://scripts/entities/Animals/wandering_animal.gd" id="1_nmnic"]
[ext_resource type="PackedScene" uid="uid://mfck21s4g3hh" path="res://scenes/ui/progressbars/ThirstBar.tscn" id="3_2ii2h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lqjiu"]
radius = 47.010635

[node name="WanderingAnimal" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_nmnic")

[node name="ThirstBar" parent="." instance=ExtResource("3_2ii2h")]
position = Vector2(-35, 38.000004)
scale = Vector2(0.7, 0.7)

[node name="Sensor" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensor"]
position = Vector2(0, 11)
shape = SubResource("CircleShape2D_lqjiu")

[connection signal="area_entered" from="Sensor" to="." method="_on_sensor_area_entered"]
[connection signal="area_exited" from="Sensor" to="." method="_on_sensor_area_exited"]
